# reversi

./: .clang-format  .gitignore  CMakeLists.txt  README.md  conanfile.txt  setup.sh
.github/workflows/: push.yml
cli/: CMakeLists.txt
cli/src/: main.cpp
lib/: CMakeLists.txt
lib/src/: reversi.cpp
src/: main.cpp  reversi.cpp  reversi.hpp
test/: CMakeLists.txt  test.cpp
test/board/: test_board.cpp
